--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zkflow-task-browserify",
   "version": "0.0.0",
   "description": "Browserify task in zkflow format",
-  "main": "src/index.js",
+  "main": "src/browserifyTask.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/zaklinaczekodu/zkflow-task-browserify.git"
@@ -24,5 +24,18 @@
   },
   "peerDependencies": {
     "gulp": "3.*"
+  },
+  "dependencies": {
+    "browserify": "13.0.0",
+    "browserify-ngannotate": "2.0.0",
+    "gulp-if": "2.0.0",
+    "gulp-rev": "6.0.1",
+    "gulp-streamify": "1.0.2",
+    "gulp-uglify": "1.5.1",
+    "gulp-watch": "4.3.5",
+    "gulp-zkflow-utils": "0.4.1",
+    "q": "1.4.1",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.7.0"
   }
 }
