--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,18 @@
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-5
-      - g++-5
+sudo: required
+dist: trusty
 
 language: node_js
 
 node_js:
+  - 6
   - 5
   - 4
-  - 0.12
-  - 0.10
 
 os:
   - linux
-
-env:
-  global:
-    - CC=gcc-5 CXX=g++-5
+  - osx
 
 before_install:
-  - npm config set progress false
   - npm install -g npm@latest
 
 script:
@@ -33,6 +23,7 @@ deploy:
   email: piotr.baranowski@zaklinaczekodu.com
   api_key: $NPM_API_KEY
   on:
-    node: 5
+    node: 6
+    condition: $TRAVIS_OS_NAME == linux
     tags: true
-    repo: zaklinaczekodu/zkflow-task-browserify
+    repo: refilljs/refill-task-browserify
