--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "zkflow-task-browserify",
+  "name": "refill-task-browserify",
   "version": "1.0.0",
-  "description": "Browserify task in zkflow format",
+  "description": "Browserify task in Refill format",
   "main": "src/browserifyTask.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zaklinaczekodu/zkflow-task-browserify.git"
+    "url": "https://github.com/refilljs/refill-task-browserify.git"
   },
   "keywords": [
     "gulp",
-    "zkflow",
+    "refill",
     "tasks"
   ],
   "author": "Piotr Baranowski <piotr.baranowski@zaklinaczekodu.com> (https://github.com/zaklinaczekodu)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zaklinaczekodu/zkflow-task-browserify/issues"
+    "url": "https://github.com/refilljs/refill-task-browserify/issues"
   },
-  "homepage": "https://github.com/zaklinaczekodu/zkflow-task-browserify",
+  "homepage": "https://github.com/refilljs/refill-task-browserify",
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-zkflow-nodemodule": "0.1.1"
+    "gulp": "3.9.1",
+    "refill-node": "^2.0.0"
   },
   "peerDependencies": {
-    "gulp": "3.*"
+    "gulp": "^3"
   },
   "dependencies": {
     "browserify": "13.0.0",
