--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "gulp": "^3"
   },
   "dependencies": {
-    "browserify": "13.0.0",
-    "gulp-if": "2.0.0",
-    "gulp-rev": "6.0.1",
+    "browserify": "13.1.0",
+    "gulp-if": "2.0.1",
+    "gulp-rev": "7.1.2",
     "gulp-streamify": "1.0.2",
-    "gulp-uglify": "1.5.1",
-    "gulp-watch": "4.3.5",
-    "gulp-zkflow-utils": "0.4.1",
-    "q": "1.4.1",
+    "gulp-uglify": "2.0.0",
+    "gulp-watch": "4.3.10",
+    "refill-globby": "^1.0.1",
+    "refill-logger": "^1.0.3",
+    "refill-next-handler": "^1.1.1",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.7.0"
   }
